2005-12-29 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b2

 * Fix: Missing quotation broke previous thumbs in microthumb nav.
   Thanks to Perrin from forums.

 * Fix: Missing ; after &nbsp microthumb nav.
 
2005-12-28 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b1

 * Fix: gTranslate relied on gettext, now works without.
   Thanks to alindeman.

 * Change: removed last ngettext() call, use gTranslate instead.

2005-12-28 Chris Kelly <ckdake@ckdake.com> 1.5.2-RC1

 * Release: 1.5.2-RC1

2005-12-28 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b61

 * Fix: Use full/resized prev in microthumbs
   Thanks to Kai.

2005-12-26 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b60

 * Fix: Aurotated photos (exif) were rotated again on copy/move.

 * Fix: Autorotation code was executed even if pic is no jpeg.

2005-12-26 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b59

 * Fix: Enable ImageMaps only in resized view.

 * Change: AltText on tipIcon

 * New: functions galleryLink() & generateAttrs()

 * Change: Added link back to photo from ImageMaps

 * Change: some indenting.

2005-12-24 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b58

 * Fix: Step 3 in Config was little bit broken.
   Thanks to Kai.

 * Change: Updated Manifest.

2005-12-23 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b57

 * Change: Added display of creation date in albums.php

 * Change: Wording in register.php

 * New: Added method getCreationDate() in classes/Album.php

 * Change: length for email and fullname field in html/userData.inc

 * Change: change of bars002 skin.

2005-12-19 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b56

 * Change: Some css in config.php

 * Fix: Disabled "Show the add vote link" in stats-wizard,
        as this functionality is not implemented yet.

 * Fix: removed redundant function galleryImage()

 * Change: simplified form_choice(); lib/setup.php

 * Fix: Some HTML fixes in config wizard.

 * New: Show h0bbel(legend) for status appearing in step1 check page.

 * New: Added Js to switch graphictoolkit settings.
