@@ -22,8 +22,8 @@
 ?>
 <?php
 
-$gallery->version = '1.5.2-RC2-cvs-b2';
-$gallery->config_version = 95;
+$gallery->version = '1.5.2-RC2-cvs-b3';
+$gallery->config_version = 96;
 $gallery->album_version = 37;
 $gallery->user_version = 6;
 $gallery->url = "http://gallery.sourceforge.net";
